# llama.cpp

./: CMakeLists.txt
ggml/: CMakeLists.txt
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  vulkan-shaders-gen.cpp
